syntax = "proto3";

package io.harness.eventsframework.entity_crud.account;

option java_multiple_files = true;
option go_package = "953_events_api";

message AccountEntityChangeDTO {
  string accountId = 1;
}